--- a/public/styles/launchpad.css
+++ b/public/styles/launchpad.css
@@ -150,3 +150,41 @@
 .autoplay-btn i {
   margin-right: 2px;
 }
+
+.themes {
+  display: flex;
+
+  flex-direction: row;
+  
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+
+  margin-top: 0.5rem;
+
+  gap: 0.75rem;
+}
+
+.themes label {
+  color: whitesmoke;
+
+  margin-right: 4px;
+}
+
+.themes select {
+  font-weight: 500;
+  color: whitesmoke;
+  text-shadow: 1px 1px 7px;
+
+  padding: 4px;
+
+  border-radius: 4px;
+  border-color: transparent;
+  box-shadow: 1px 1px 8px 4px black;
+
+  background-color: rgb(25, 25, 128);
+}
+
+.themes select::selection {
+  border-color: inherit;
+}
