--- a/public/styles/launchpad.css
+++ b/public/styles/launchpad.css
@@ -188,3 +188,44 @@
 .themes select::selection {
   border-color: inherit;
 }
+
+.devices {
+  display: flex;
+
+  flex-direction: column;
+  
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+
+  margin-top: 0.65rem;
+
+  gap: 0.75rem;
+
+  padding: 8px;
+
+  background-color: rgba(15, 20, 140, 0.2);
+  border-radius: 4px;
+  
+  box-shadow: inset 1px 2px 12px 4px black;
+}
+
+.devices label {
+  color: whitesmoke;
+}
+
+.devices select {
+  color: white;
+  
+  border-color: rgb(46, 46, 46);
+  border-radius: 4px;
+  padding: 4px;
+
+  background-color: rgba(24, 24, 24, 0.75);
+}
+
+#devices {
+  width: 75%;
+
+  flex-grow: 1;
+}
