--- a/views/index.html
+++ b/views/index.html
@@ -62,12 +62,20 @@
             <option value="lpx">Launchpad X</option>
           </select>
         </div>
+
+        <div class="devices">
+          <label for="devices">Select Midi Device:</label>
+          <select name="devices" id="devices">
+            <option value="" selected default>None</option>
+          </select>
+        </div>
       </div>
     </div>
   </div>
   <!-- <div class="launchpad-container">
     <canvas id="launchpad"></canvas>
   </div> -->
+  <script src="scripts/lpx.js"></script>
   <script src="scripts/launchpad.js"></script>
   <script src="scripts/script.js"></script>
 </body>
